<resources>
    <string name="app_name">damaruadmin</string>
    <string name="add_user">Add User</string>
    <string name="my_system_users">My System Users</string>
    <string name="add">Add</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="password_dont_match">Password doesn\'t match</string>
    <string name="error">Error</string>
    <string name="assign_device">Assign</string>
    <string name="delete_user">Delete User</string>
    <string name="are_you_sure_you_want_to_delete_this_user">Are you sure you want to delete this user?</string>
    <string name="linked_success">Devices linked to this user.</string>
    <string name="unlink_this_device">Unlink Device from this User?</string>
    <string name="are_you_sure_unlink_device">Are you sure you want to unlink this device from this user ?</string>
    <string name="delete">Delete</string>
    <string name="no_devices_assigned">No Devices Assigned</string>
    <string name="extend_expiry">Extend Expiry ??</string>
    <string name="do_you_want_to_extend_expiry">Do you want extend expiry day of this device ??</string>
    <string name="extend">Extend</string>
    <string name="no_of_days">No. of days</string>
    <string name="close">Close</string>
    <string name="please_enter_no_of_days_to_extend">Please enter no of days to extend</string>
    <string name="search">Search</string>
    <string name="no_users">No users found</string>
    <string name="add_emulator">Add Emulator</string>
    <string name="emulator_name">Emulator Name</string>
    <string name="emulator_id">Emulator Id</string>
    <string name="please_enter_emulator_name">Please enter emulator name</string>
    <string name="please_enter_emulator_id">Please enter emulator ID.</string>
    <string name="add_device">Add Device</string>
    <string name="delete_emulator">Delete Emulator</string>
    <string name="are_you_sure_you_want_to_delete_this_emulator">Are you sure you want to delete this emulator?</string>
    <string name="no_emulators">No Emulators</string>
    <string name="users">Customers</string>
    <string name="details">Details</string>
    <string name="edit_device_details">Edit Device Details</string>
    <string name="device_details">Device Details</string>
    <string name="save">Save</string>
    <string name="enter_device_details">Enter device details</string>
</resources>