<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:contentPaddingBottom="32dp"
        app:contentPaddingLeft="12dp"
        app:contentPaddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/extend_expiry"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/do_you_want_to_extend_expiry"
                android:textColor="@color/blackTransparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/no_of_days"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTitle"
                app:startIconDrawable="@drawable/ic_expiry_days">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDays"
                    style="@style/CustomTextInputEditText"
                    android:digits="0987654321"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClose2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="44dp"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/btnExtend"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExtend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/extend"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/greenLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/btnClose2"
                app:layout_constraintTop_toTopOf="@+id/btnClose2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>